frontend/2.frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  namespace: cloudacademy
  labels:
    app: frontendservice
spec:
  ports:
   - protocol: TCP
     port: 80
  selector:
    app: frontend
