frontend/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  labels:
    app: frontendservice
spec:
  ports:
   - protocol: TCP
     port: 80
  selector:
    app: frontend
