frontend/3.frontend.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: cloudacademy
spec:
 rules:
 - host: frontend.X.X.X.X.nip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: frontendservice
         servicePort: 80
